    by Alierak.
 -- @email - Accents could affect message validity (Issue 85).  Found by
    Alierak.
 -- Allow addcom to channel names containing spaces (Issue 58).
 -- Fixed channels() help topic (Issue 54).  The channels()
    implementation doesn't not return a comma-space separated list, but
    a space-only separated list.
 -- Fixed an lbuf leak in hasquota() introduced in TinyMUX 2.1. Bug
    found and fixed by Alierak.
 -- Document @clone/preserve switch.
 -- Update TRACE helpfile for new attribute flag functionality (Issue 104). 
 -- Add @htdesc and @vrml_url documentation (Issue 44).
 -- Local declaration of ltdWarp in cque.cpp hid global declaration.
    @timewarp/queue would have ignored <secs> and become a no-op
    (Issue 167).
 -- @timewarp/queue advanced a queued command's displayed time (as seen
    by @ps), but did not update the run time of the underlying task, so
    the command did not execute any sooner (Issue 172).
 -- Protect qsort() from invalid arguments that should not happen
    (Issue 125 and 159).
 -- Add 'GameFull' reason which should never be referenced, but it
    suppresses a compiler warning (Issue 148).
 -- Remove arbitrary constant, 1000, and re-work @forwardlist codepaths
    (Issue 168 and 175).
 -- Suppress compiler warning in anum_extend() and compact code
    (Issues 169 and 170).
 -- Suppress compiler warning in add_helpfile() (Issue 165).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.


Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().